src/test/deca/context/invalid/homemade/this_in_main.deca
// trying to use "this" in main

{
    int x = 2;
    this.x = 3;
}